<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rlProjectList" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/rl_top1_projectList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp" 
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
	     <TextView
		   	android:id="@+id/txt_coupon_code"
		   	android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:textColor="#000000"
		   	android:textSize="12dp"
		   	android:text=""
		    android:layout_marginTop="2dp" />
        <TextView
		   	android:id="@+id/lbl_company_name"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:textColor="@color/darkGrey"
		   	android:textSize="10dp"
		   	android:text="@string/titleName"
			android:gravity="center"
			android:layout_alignRight="@+id/lbl_coupon_created"
		   	android:layout_below ="@+id/txt_coupon_code"
		   	android:layout_marginTop="2dp" />

         <TextView
             android:id="@+id/txt_company_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/lbl_company_name"
             android:layout_toRightOf="@+id/txt_company_name"
             android:gravity="center"
             android:text=""
             android:textColor="@color/darkGrey"
             android:textSize="12dp"
             android:layout_marginLeft="10dp" />

       	<TextView
       	    android:id="@+id/lbl_coupon_amount"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_alignBottom="@+id/lbl_company_name"
       	    android:layout_centerHorizontal="true"
       	    android:text="@string/titleAmount"
       	    android:textColor="@color/darkGrey"
       	    android:textSize="12dp" />
       	<TextView
       	    android:id="@+id/txt_coupon_amount"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_alignBottom="@+id/lbl_company_name"
       	    android:layout_toRightOf="@+id/lbl_coupon_amount"
       	    android:text=""
       	    android:textColor="@color/darkGrey"
       	    android:textSize="12dp" 
       	    android:layout_marginLeft="10dp"/>
       	 <TextView
		   	android:id="@+id/lbl_coupon_created"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:textColor="@color/darkGrey"
		   	android:textSize="10dp"
		   	android:text="@string/titleInvitorInvited"
		   	android:gravity="center"
		   	android:layout_below ="@+id/lbl_coupon_amount"
		   	
		   	android:layout_marginTop="2dp" />

         <TextView
             android:id="@+id/txt_coupon_created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/lbl_invitor_invited"
             android:layout_toRightOf="@+id/lbl_coupon_created"
             android:gravity="center"
             android:text=""
             android:textColor="@color/darkGrey"
             android:textSize="10dp"
             android:layout_marginLeft="10dp" />
        

	</RelativeLayout>
</RelativeLayout>
