<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<FrameLayout
        android:id="@+id/menuPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </FrameLayout>
    <LinearLayout
        android:id="@+id/slidingPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:gravity="left"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp" 
            android:background="@drawable/blue_bg" >

            <View
                android:id="@+id/header_vertical_divider_1"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/menuViewButton" />

            <ImageView
                android:id="@+id/menuViewButton"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:padding="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/left_menu"
                android:visibility="visible" 
                android:layout_width="40dp"
                android:layout_height="40dp"/>
			<View
                android:id="@+id/header_vertical_divider_2"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@+id/menuRightButton" />
			<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_birthday_project"
                    android:layout_centerInParent="true"
                    android:textSize="18dp"
                    android:textColor="#ffffff"/>
        	<ImageView
                android:id="@+id/menuGoToAdd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:contentDescription="@string/description"
                android:src="@drawable/add_project" />
        </RelativeLayout>

       <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:background="@drawable/sky">
	       <RelativeLayout 
		        android:id="@+id/btnPanelTop"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent">
			    <RelativeLayout 
			        android:id="@+id/btnPanel"
			        android:layout_width="wrap_content"
			        android:layout_height="40dp"
			        android:layout_centerHorizontal="true">
			        <Button
			             android:id="@+id/btnNow"
			             android:layout_width="120dp"
			             android:layout_height="30dp"
			             android:layout_centerVertical="true"
			             android:textColor="@color/black"
			             android:text="@string/title_now" 
			             android:background="@drawable/button_click" />
					 <Button
			             android:id="@+id/btnExpired"
			             android:layout_width="120dp"
			             android:layout_height="30dp"
			             android:layout_centerVertical="true"
			             android:layout_toRightOf="@+id/btnNow"
			             android:textColor="@color/black"
			             android:text="@string/title_expired" 
			             android:background="@drawable/button"/>
				</RelativeLayout>
				 <ListView android:layout_width="fill_parent" 
			     android:id="@+id/list_project_now"
			     android:layout_height="wrap_content"
			     android:divider="#b5b5b5" 
			     android:dividerHeight="0.5dp"
			     android:layout_below="@+id/btnPanel" 
			     android:layout_centerHorizontal="true"
			     android:listSelector="@android:color/transparent"
				 android:cacheColorHint="@android:color/transparent"/>
				 <ListView android:layout_width="fill_parent"
				     android:id="@+id/list_project_expired"
				     android:layout_height="wrap_content"
				     android:divider="#b5b5b5" 
				     android:layout_below="@+id/list_project_now"
				     android:dividerHeight="0.5dp" 
				     android:layout_centerHorizontal="true"
				     android:listSelector="@android:color/transparent"
					 android:cacheColorHint="@android:color/transparent"/>
			</RelativeLayout>
			
		</RelativeLayout>
    </LinearLayout>  
     
</FrameLayout>